mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: mysql
spec:
  selector:
    app: mysql
    version: "5.7"
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
